--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Simplified ERP System</title>
+    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" type="text/css" license key=Ngo9BigBOggjHTQxAR8/V1NAaF1cXmhKYVJxWmFZfVpgdVVMY1hbR35PMyBoS35RckVgWH9fcHdRRWhUWUxx/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
